[gd_scene load_steps=27 format=3 uid="uid://jx7ailpftvmm"]

[ext_resource type="Script" uid="uid://cx63labfsh2dm" path="res://scripts/world1/enemy_1.gd" id="1_7kj8q"]
[ext_resource type="Texture2D" uid="uid://cqc1d0gax4yoi" path="res://assets/world1/enemy1/attack.png" id="2_ot8cq"]
[ext_resource type="Texture2D" uid="uid://vqk6gjjtk3pd" path="res://assets/world1/enemy1/idle.png" id="3_5r5c7"]
[ext_resource type="Texture2D" uid="uid://bjhyledycvqs4" path="res://assets/world1/enemy1/detaction.png" id="3_pufmm"]
[ext_resource type="Texture2D" uid="uid://2upgpwibqmj3" path="res://assets/world1/enemy1/move.png" id="4_4bgbs"]
[ext_resource type="AudioStream" uid="uid://b7r4mk4hvmkww" path="res://assets/world1/enemy1/myinstants.mp3" id="6_a40ek"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f8ktk"]
size = Vector2(5, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_7kj8q"]
radius = 95.2575

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mkdd2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pufmm"]
bg_color = Color(0.666524, 0.180437, 9.62615e-08, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_2suww"]
atlas = ExtResource("2_ot8cq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g41i"]
atlas = ExtResource("2_ot8cq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilujh"]
atlas = ExtResource("2_ot8cq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jy47p"]
atlas = ExtResource("2_ot8cq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_if2gk"]
atlas = ExtResource("2_ot8cq")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a40ek"]
atlas = ExtResource("3_pufmm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7ay6"]
atlas = ExtResource("3_pufmm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv1wi"]
atlas = ExtResource("3_pufmm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vavy"]
atlas = ExtResource("3_pufmm")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6g3xl"]
atlas = ExtResource("3_pufmm")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hy2a"]
atlas = ExtResource("3_5r5c7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jakl"]
atlas = ExtResource("3_5r5c7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e7i7"]
atlas = ExtResource("4_4bgbs")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyacv"]
atlas = ExtResource("4_4bgbs")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3r0ss"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2suww")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_7g41i")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_ilujh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jy47p")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_if2gk")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a40ek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7ay6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv1wi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vavy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6g3xl")
}],
"loop": false,
"name": &"detection",
"speed": 12.0
}, {
"frames": [{
"duration": 1.6,
"texture": SubResource("AtlasTexture_4hy2a")
}, {
"duration": 0.9,
"texture": SubResource("AtlasTexture_7jakl")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e7i7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyacv")
}],
"loop": true,
"name": &"move",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fibm2"]
size = Vector2(12, 3)

[node name="enemy1" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_7kj8q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_f8ktk")

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
visible = false
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_7kj8q")

[node name="health_bar" type="ProgressBar" parent="."]
z_index = 1
offset_left = -21.0
offset_top = -17.0
offset_right = 20.0
offset_bottom = -15.0
theme_override_styles/background = SubResource("StyleBoxFlat_mkdd2")
theme_override_styles/fill = SubResource("StyleBoxFlat_pufmm")
max_value = 50.0
value = 50.0
show_percentage = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_3r0ss")
animation = &"attack"
autoplay = "idle"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="attack_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="attack_collision_shape" type="CollisionShape2D" parent="attack_area"]
position = Vector2(10, -3.5)
shape = SubResource("RectangleShape2D_fibm2")
disabled = true

[node name="detection_sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(2, -7)
stream = ExtResource("6_a40ek")

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
